compensation fixed , forms spacing

--- a/src/components/Header/headerStyles.module.scss
+++ b/src/components/Header/headerStyles.module.scss
@@ -1,4 +1,46 @@
 @import './../../variable.module.scss';
+.menuBarGrid{
+	margin-bottom: 8px;
+	.popupContainer {
+		margin: 24px 0px 0px 30px;
+		display: flex;
+		align-items: center;
+		.name {
+			color: #000000;
+			font-family: Poppins;
+			font-size: 18px;
+			font-weight: 500;
+			letter-spacing: 0;
+			line-height: 27px;
+			margin-left: 13px;
+		}	
+		.email {
+			color: #000000;
+			font-family: Poppins;
+			font-size: 13px;
+			letter-spacing: 0;
+			line-height: 20px;
+
+		}
+	}
+	.divider {
+		margin-top: 18px !important;
+	}
+	.menuBarItems{
+		margin-left: 30px;	
+		.itemsFont {
+			color: #000000;
+			font-family: Poppins;
+			font-size: 18px;
+			letter-spacing: 0;
+			line-height: 27px;
+			margin-top: 30px;
+		}
+	
+	}
+}
+
+
 .mainContainer {
   display: flex;
   align-items: center;
@@ -32,5 +74,9 @@
     gap: 75px;
     align-items: center;
     margin-right: 30px;
-  }
+	}
+	.memberAvatar {
+		height: 49px; 
+		width: 49px;
+	}
 }
