--- a/src/containers/AddCampaign/AddCampaignDetails/AddCampaignDetail.module.scss
+++ b/src/containers/AddCampaign/AddCampaignDetails/AddCampaignDetail.module.scss
@@ -11,7 +11,7 @@ display: none !important;
 }
 .dropDownCustomizeSvg{
 	svg{
-		margin-left: -36px;
+		margin-left: -33px;
 		margin-right: 20px;
 	}
 }
