--- a/src/containers/AddCampaign/Compensations/CreateCompensation/CreateCompensation.module.scss
+++ b/src/containers/AddCampaign/Compensations/CreateCompensation/CreateCompensation.module.scss
@@ -25,3 +25,22 @@
 			margin-right: 20px;
 		}
 	}
+	.giftCard{
+		margin-top: 25px !important;
+		& > label{
+			line-height: 18px !important;
+		}
+
+	}
+
+	.product{
+			padding-bottom: 20px !important;
+		& > label{
+			line-height: 18px !important;
+		}
+	}
+
+	.marginbottomSelect{
+		margin-bottom: 19px !important;
+
+	}
