--- a/src/containers/AddCampaign/Deliverables/CreateDeliverable/CreateDeliverable.module.scss
+++ b/src/containers/AddCampaign/Deliverables/CreateDeliverable/CreateDeliverable.module.scss
@@ -74,7 +74,15 @@
     letter-spacing: 0.24px;
     line-height: 25px;
     margin-top: 16px;
-  }
+	}
+	.marginbottom{
+		margin-bottom: 25px !important;
+
+	}
+	.marginbottomSelect{
+		margin-bottom: 9px !important;
+
+	}
 
  
 //  .marginTop{
